--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,16 +1,17 @@
 pipeline {
     agent any
-    
+
+    tools {
+        maven 'Maven 3.9.2' // Adjust this to your Maven version
+        jdk 'JDK 11' // Adjust this to your JDK version
+    }
+
     stages {
-        stage('Skip') {
-            steps {
-                 Denforcer.skip=true'
-            }
-        }
         stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
             }
+        }
         stage('Test') {
             steps {
                 sh 'mvn test'
@@ -21,10 +22,12 @@ pipeline {
                 }
             }
         }
-        stage('Deliver') {
+        stage('Deploy') {
             steps {
-                sh './jenkins/scripts/deliver.sh'
+                sh './jenkins/scripts/deploy.sh'
             }
         }
     }
 }
+
+
