--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,7 +1,9 @@
 pipeline {
-    agent any
-    tools {
-        maven 'Maven 3.9.2' // Adjust this to your Maven version   
+    agent {
+        docker {
+            image 'maven:3.9.0'
+            args '-v /root/.m2:/root/.m2'
+        }
     }
     stages {
         stage('Build') {
@@ -26,5 +28,3 @@ pipeline {
         }
     }
 }
-
-
